# BoilingHotWater

./: .gitignore  CMakeLists.txt  LICENSE  README.md
BHW/: CMakeLists.txt  DLLEntryPoint.cpp  EntryPoint.cpp
BHW/utils/: Debug.hpp  Hash.hpp  String.cpp
BHW/utils/console/: Console.cpp  NewConsole.cpp  NewConsole.hpp  Stream.hpp
BHW/utils/dlls/: DLL.cpp  DLL.hpp
BHW/utils/event/: HybridEventSystem.hpp
BHW/utils/io/: FileHandler.cpp  FileHandler.hpp
BHW/utils/logger/: LoggedMessage.hpp
BHW/utils/random/: PRNGAlgorithms.cpp  Random.cpp  Random.hpp
BHW/utils/reflection/: Reflection.hpp  ReflectionDefinitions.hpp  Type.hpp  TypeInfo.hpp
